force-app/main/default/objects/leaseworks__Rent_Extension_Input__c/leaseworks__Rent_Extension_Input__c.object-meta.xml
<CustomObject>
    <description>This object store the Rent Extension Assumptions record for the CashFlows
[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Rent Extension Input</label>
    <nameField>
        <displayFormat>REI-{000000}</displayFormat>
        <label>Rent Extension Input Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rent Extension Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>