force-app/main/default/objects/leaseworks__Rent_Extension_Input__c/fields/leaseworks__Cash_Flow__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cash_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Flow</label>
    <referenceTo>leaseworks__Scenario_Input__c</referenceTo>
    <relationshipLabel>Rent Extension Inputs</relationshipLabel>
    <relationshipName>Rent_Extension_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>