force-app/main/default/objects/leaseworks__Rent_Extension_Input__c/fields/leaseworks__From_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__From_Date__c</fullName>
    <label>From Date</label>
    <type>Date</type>
</CustomField>